# Image-Filter

./: .gitignore  CMakeLists.txt  README.md  cache-preload.cmake  iwyu_mapping.imp
.github/workflows/: ubuntu-cmake-build-test.yml
include/imgf/: DataObject.h  InputPort.h  InputPortTemplate.h  Node.h  OutputPort.h  OutputPortTemplate.h  Scalar.h  ScalarAddNode.h  ScalarDouble.h  ScalarDoubleAddNode.h  ScalarDoubleInputPort.h  ScalarDoubleNode.h  ScalarDoubleOutputPort.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/imgf/: CMakeLists.txt  InputPort.cpp  Node.cpp  OutputPort.cpp  ScalarDouble.cpp  ScalarDoubleAddNode.cpp  ScalarDoubleInputPort.cpp  ScalarDoubleNode.cpp  ScalarDoubleOutputPort.cpp
test/: CMakeLists.txt
test/imgf/: CMakeLists.txt  InputPortTest.cpp  OutputPortTest.cpp  ScalarDoubleAddNodeTest.cpp  ScalarDoubleNodeTest.cpp
